bin/tui/src/snapshots/tui__snapshot_tests__snap_table_pipe_not_a_table.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ show pipes                                                                 │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭────────────────────────────────────────────────────────────────────────────╮ "
" │ Consider the rule                                                          │ "
" │ |x| y => x                                                                 │ "
" │ applied inline.                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
