bin/tui/src/snapshots/tui__snapshot_tests__snap_table_wide_cell_wraps.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ show wide table                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
"  Some results:                                                                 "
"                                                                                "
"  ┌───────┬──────────────────────────────────────────────────────────────────┐  "
"  │ Name  │ Description                                                      │  "
"  ├───────┼──────────────────────────────────────────────────────────────────┤  "
"  │ alpha │ This value is very long and should wrap to a second visual line  │  "
"  │       │ in the grid                                                      │  "
"  └───────┴──────────────────────────────────────────────────────────────────┘  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
