bin/tui/src/snapshots/tui__snapshot_tests__snap_tool_display_balanced.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
"Session: s1───────────────────────────────────────────────────────────── [idle] "
"                                                                                "
" bash  exit 0                                                                   "
" ↳ 0 lines returned                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭[INSERT]──────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · Tab"
