bin/tui/src/snapshots/tui__snapshot_tests__snap_tool_result_collapsed.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
"┌Session: s1─────────────────────────────────────────────────────────── [idle] ┐"
"│┌ tool:bash  exit 0────────────────────────────────────────────────────────┐  │"
"││ Compiling tui v0.1.0                                                     │  │"
"││ Finished in 3.2s                                                         │  │"
"│└──────────────────────────────────────────────────────────────────────────┘  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│╭[INSERT]────────────────────────────────────────────────────────────────────╮│"
"││                                                                            ││"
"││                                                                            ││"
"│╰────────────────────────────────────────────────────────────────────────────╯│"
"│ q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T│"
"└──────────────────────────────────────────────────────────────────────────────┘"
