bin/tui/src/snapshots/tui__snapshot_tests__snap_tool_result_edit.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
"                                                                                "
"  edit                                                                          "
"  ↳ diff +1 -1 • split  [ ━━━━━━ ━━━━━━ ]                                       "
"  bin/tui/src/main.rs                                                           "
"  ───────────────────────────────────  │  ───────────────────────────────────   "
"  old │                                │  new │                                 "
"    1 │  fn  add(a:  i32 , b:  i3   …  │    1 │  fn  add(a:  i32 , b:  i3   …   "
"    2 │      a + b                     │    2 │      a + b                      "
"    3 │  }                             │    3 │  }                              "
"    4 │                                │    4 │                                 "
"    5 │  fn  main() {                  │    5 │  fn  main() {                   "
"    6 │       let  total = add( 1   …  │    6 │       let  total = add( 1   …   "
"  ▌ 7 │       let  unused = add(    …  │  ▌ 7 │       let  doubled = add(tot…   "
"    8 │  }                             │    8 │  }                              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
