bin/tui/src/snapshots/tui__snapshot_tests__snap_tree_event_pane_lines.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ build the project                                                                              │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"             ⎿ 1 step · bash ×1                                                                     "
"                                                                                                    "
" ╭──────────────────╭commands (narrow) — 4 items───────────────────────────────╮──────────────────╮ "
" │ Done.            │╭commands────────────────────────────────────────────────╮│                  │ "
" ╰──────────────────││  G <user> build the project  #1                        ││──────────────────╯ "
"                    ││❯ G bash make -j4  #2                                   ││                    "
"                    ││  G bash ok All targets up to date  #3                  ││                    "
"                    ││  G <assistant> Done.  #4                               ││                    "
"                    │╰────────────────────────────────────────────────────────╯│                    "
"                    │                                                          │                    "
"                    │╭bash make -j4───────────────────────────────────────────╮│                    "
"                    ││{                                                       ││                    "
"                    ││  "command":"make -j4"                                  ││                    "
"                    ││}                                                       ││                    "
"                    ││                                                        ││                    "
"                    ││Enter offers the four options (View-only, Rewind        ││                    "
"                    ││without summary, Summarize the branch, Summarize with   ││                    "
"                    │╰────────────────────────────────────────────────────────╯│                    "
"                    │:  [f: full] · enter ok · esc close · ctrl-j/k move · ctrl│                    "
"                    ╰──────────────────────────────────────────────────────────╯                    "
"                                                                                                    "
" ╭[INSERT]────────────────────────────────────────────────────────────────────────────────────────╮ "
" │                                                                                                │ "
" │                                                                                                │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · Tab · PgUp/Dn         "
