bin/tui/src/snapshots/tui__snapshot_tests__snap_tree_filter_hint_in_input_bar.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ build the project                                                                              │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"             ⎿ 1 step · bash ×1                                                                     "
"                                                                                                    "
" ╭──────────────────╭commands (narrow) — 2 items───────────────────────────────╮──────────────────╮ "
" │ Done.            │╭commands────────────────────────────────────────────────╮│                  │ "
" ╰──────────────────││❯ G bash make -j4  #2                                   ││──────────────────╯ "
"                    ││  G bash ok All targets up to date  #3                  ││                    "
"                    ││                                                        ││                    "
"                    ││                                                        ││                    "
"                    ││                                                        ││                    "
"                    ││                                                        ││                    "
"                    ││                                                        ││                    "
"                    ││                                                        ││                    "
"                    ││                                                        ││                    "
"                    ││                                                        ││                    "
"                    ││                                                        ││                    "
"                    ││                                                        ││                    "
"                    ││                                                        ││                    "
"                    │╰────────────────────────────────────────────────────────╯│                    "
"                    │:  [f: tool] · enter ok · esc close · ctrl-j/k move · ctrl│                    "
"                    ╰──────────────────────────────────────────────────────────╯                    "
"                                                                                                    "
" ╭[INSERT]────────────────────────────────────────────────────────────────────────────────────────╮ "
" │                                                                                                │ "
" │                                                                                                │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · Tab · PgUp/Dn         "
